# termsnoop

./: .gitignore  Cargo.toml  README.md
.github/copilot/: termsnoop.md
.github/prompts/: termsnoop-design.md
.github/workflows/: ci.yml  release.yml
powershell/: README.md  termsnoop-cli.ps1  termsnoop.psd1  termsnoop.psm1
powershell/skills/termsnoop/: SKILL.md
powershell/tests/: termsnoop.tests.ps1
rust/skills/termsnoop/: SKILL.md
rust/src/: config.rs  main.rs  mcp.rs  pty_proxy.rs  session.rs
src/: boundary.rs  cli.rs  config.rs  main.rs  pty_proxy.rs
