[package]
name = "termsnoop"
version = "0.1.0"
edition = "2021"
description = "Terminal capture for AI CLI integration"
license = "MIT"
authors = ["Sayed Ibrahim Hashimi"]
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
portable-pty = "0.8"
rand = "0.8"
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0.2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
